syntax = "proto3";
// proto/user.proto

syntax = "proto3";

package user;

service UserService {
  rpc RegisterUser (RegisterRequest) returns (UserRegisterResponse);
  rpc LoginUser (LoginRequest) returns (UserLoginResponse);
  rpc LoginWithToken (LoginWithTokenRequest) returns (LoginWithTokenResponse);
}

message RegisterRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginWithTokenRequest {
  string token = 1;
}

message UserRegisterResponse {
  bool success = 1;
  string message = 2;
  string uuid = 3;
  string userName = 4;
  string email = 5;
}

message UserLoginResponse {
  bool success = 1;
  string message = 2;
  string token = 3 ;
  SessionData session = 4 ; 
}

message LoginWithTokenResponse {
  bool success = 1;
  string message = 2;
  SessionData session = 3;

}

message SessionData {

    string sessionId = 1;
    string userId = 2;
    string userEmail = 3 ;
    string userName = 4 ;
}
