syntax = "proto3";

package main;

message SessionData {
  string sessionID = 1;
  string userUUID = 2;
  string userEmail = 3;
  string userName = 4;
}

service AuthGatewayService {
  rpc RegisterUser (RegisterRequest) returns (AuthResponse);
  rpc LoginUser (LoginRequest) returns (LoginResponse);
  rpc CheckSessionValid (SessionCheckRequest) returns (SessionCheckResponse);
  rpc Logout (LogoutRequest) returns (LogoutResponse);
  rpc LoginWithToken (LoginWithTokenRequest ) returns (LoginWithTokenResponse);
}

message RegisterRequest {
  string userName = 1;
  string email = 2;
  string password = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message AuthResponse {
  bool success = 1;
  string message = 2;
}

message LoginResponse {
  bool success = 1;
  string message = 2;
  SessionData sessionData = 3;
}

message SessionCheckRequest {
  string sessionID = 1;
}

message SessionCheckResponse {
  bool success = 1;
  string message = 2;
  SessionData sessionData = 3;
}

message LogoutRequest {
  string sessionID = 1;
}

message LogoutResponse {
  bool success = 1;
  string message = 2;
}

message LoginWithTokenResponse{
  bool success = 1 ;
  string message = 2 ;  
}
message LoginWithTokenRequest{
  string token = 1  ; 
}